[package]
name = "health-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
derive = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde_json = "1.0.115"
